--- a/package.json
+++ b/package.json
@@ -37,7 +37,51 @@
 					"name": "exampleView"
 				}
 			]
-		}
+		},
+		"taskDefinitions": [
+			{
+			  "type": "one",
+			  "required": [
+				"command"
+			  ],
+			  "properties": {
+				"command": {
+				  "type": "string"
+				}
+			  }
+			}
+		  ],
+		  "problemMatchers": [
+			{
+			  "name": "one-start-watch",
+			  "label": "%one.problemMatchers.oneStartWatch%",
+			  "owner": "One Extension",
+			  "source": "one",
+			  "applyTo": "allDocuments",
+			  "fileLocation": [
+				"relative",
+				"${workspaceFolder}"
+			  ],
+			  "pattern": [
+				{
+				  "regexp": "^.*?\\.js$",
+				  "file": 0
+				},
+				{
+				  "regexp": "^\\s*Line\\s+(\\d+):(\\d+):\\s+(.*)$",
+				  "line": 1,
+				  "column": 2,
+				  "message": 3
+				}
+			  ],
+			  "background": {
+				"activeOnStart": true,
+				"beginsPattern": ".*",
+				"endsPattern": "Compiled|Failed"
+			  },
+			  "severity": "error"
+			}
+		]
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
